# flask-hello-world

./: .env  .env.templates  .gitignore  Dockerfile  InsertingImage.py  LICENSE  README.md  SendEmail.py  SendEmailPicture.py  SendEmailTemperature.py  app.py  application.py  build.sh  chatai.py  config.py  crear_tablas.py  database.db  datadog.yaml  db.py  first.py  login.html  manage.py  models.py  openaiapikey.txt  output.txt  pyproject.toml  render.yaml  req.txt  requirements.txt  responses.json  testCreationDatabase.py  testRetrievingImage.py  utils.py
Jenkins/: docker_build.jenkins  docker_deploy_and_start.jenkins  test_file_for_commit.txt
app/: urls.py  views.py
data/: donnerExperts.json
gunicorn.d/: conf.yaml
meta_craft_be/: asgi.py  settings.py  urls.py  wsgi.py
models/: daollm.py  embedding.py  expfind.py  findstage.py  jsonloader.py  keymodel.py  llm.py  oraclecnx.py  prediction.py  scrapPdf.py  scrapUrl.py  txtmodel.py
scripts/: update_db.py
static/: styles.css
static/css/: style.css
static/js/: script.js
templates/: base.html  calendar.html  documents.html  download.html  estudiantes.html  failure.html  gallery.html  hello.html  home.html  index.html  layout.html  links.html  main.css  page.html  post.html  success.html  table.css
