[tool.poetry]
name = "meta-craft-be"
version = "0.1.0"
description = ""
authors = ["Daniel Olagunju <todak2000@gmail.com>"]
readme = "README.md"
packages = [{include = "meta_craft_be"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
bcrypt = "^4.0.0"
django-cors-headers = "^3.13.0"
PyJWT = "^2.4.0"
requests = "^2.28.1"
pysendpulse = "^0.1.4"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
